Prevent unwanted horizontal scroll by setting overflow-x hidden on body

--- a/src/assets/styles/basics/base.css
+++ b/src/assets/styles/basics/base.css
@@ -7,6 +7,7 @@ body {
 
     font-family: cereal-light, Circular, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: --var(clr2);
+    overflow-x: hidden;
 }
 
 h1,
